src/k8s/headlamp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    cert-manager.io/cluster-issuer: levizitting-ca
    traefik.ingress.kubernetes.io/router.middlewares: headlamp-headlamp-https-redirect@kubernetescrd,oauth2-proxy-oauth2-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - headlamp.levizitting.com
      secretName: headlamp-tls
  rules:
    - host: headlamp.levizitting.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
